# SoftwareCompensationWeightDetermination

./: CMakeLists.txt  README.md
include/: EventClass.h  WeightDetermination.h
src/: EventClass.cc  WeightDetermination.cc
